# crypto_msc_thesis

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Kedro_original_readme.md  LICENSE  README.md  data_flow_rules.md  docker-compose.yaml  next_steps.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS
assets/: diagrams.pptx  ~$diagrams.pptx
conf/base/: globals.yml
data/01_raw/: binance_raw.parquet  yahoo_finance_raw.parquet
data/03_primary/: binance_prm.parquet  yahoo_finance_prm.parquet
data/05_model_input/: spine_labeled.parquet  spine_log_return.parquet  spine_preprocessing.parquet
docs/diagrams/: diagrams.pptx
docs/source/: conf.py  crypto_thesis.data_domains.benchmark.rst  crypto_thesis.data_domains.binance.rst  crypto_thesis.data_domains.master_table.rst  crypto_thesis.data_domains.modeling.rst  crypto_thesis.data_domains.portfolio.rst  crypto_thesis.data_domains.rst  crypto_thesis.data_domains.spine.rst  crypto_thesis.pipelines.benchmark.rst  crypto_thesis.pipelines.binance.rst  crypto_thesis.pipelines.master_table.rst  crypto_thesis.pipelines.modeling.rst  crypto_thesis.pipelines.portfolio.rst  crypto_thesis.pipelines.rst  crypto_thesis.pipelines.spine.rst  crypto_thesis.rst  crypto_thesis.utils.rst  index.rst  modules.rst
notebooks/methodology/: LEGACY_logreg_prmsOpt_hyperopt.ipynb  LEGACY_lstm_params_opt.ipynb  LEGACY_xgboost_prmsOpt_1by1.ipynb  LEGACY_xgboost_prmsOpt_hyperopt.ipynb  eval_labeling_class.ipynb  general_plots.ipynb  hyperparameter_opt.ipynb  logreg_params_opt.ipynb  logreg_params_opt_cv.ipynb  logreg_prmsOpt_hyperopt.ipynb  lstm_params_opt.ipynb  lstm_params_opt_cv.ipynb  methodology.ipynb  pandas_ta_example.ipynb  scale_comparison.ipynb  timeseries_split_cv.ipynb  vif_fte_selection.ipynb  xgb_logreg_params_opt.ipynb  xgboost_params_opt.ipynb  xgboost_params_opt_cv.ipynb  xgboost_prmsOpt_1by1.ipynb  xgboost_prmsOpt_hyperopt.ipynb  xgboost_prmsOpt_hyperopt_cv.ipynb
notebooks/reporting/: LSTM_model_eval.ipynb  LogReg_model_eval.ipynb  XGBoost_model_eval.ipynb  evaluate_label_classAndSignal.ipynb  evaluate_probas.ipynb  get_best_models_params.ipynb  model_eval.ipynb  portfolio_eval.ipynb  portfolio_vs_benchmark.ipynb  portfolios_regression.ipynb
notebooks/results/: EDA.ipynb  EDA_coinsUniverse_subset.ipynb  benchmark_performance.ipynb  benchmark_performance_oos.ipynb  classification_results.ipynb  classification_results_oos.ipynb  features.ipynb  model_selection_training.ipynb  models_processingTime_evaluation.ipynb  portfolio_performance.ipynb  portfolio_performance_oos.ipynb  target.ipynb
notebooks/utils/: fte_comparison.ipynb  get_crypto_pair_names.ipynb  get_minMax_logRets_pctChg.ipynb  master_table_comparison.ipynb  models_comparison.ipynb  spine_comparison.ipynb
src/: setup.py
src/crypto_thesis/: __init__.py  __main__.py  pipeline_registry.py  (+1 more)
(+75 files in other folders)
